PIVOT-2996 clean poms